# repoman

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  polkit-helper  pyproject.toml  repoman-project-spec.md  requirements.txt  test-plan.md
.github/workflows/: build-deb.yml  ci.yml  docs.yml
data/: io.github.Tecktron.repoman.desktop  io.github.Tecktron.repoman.gschema.xml  io.github.Tecktron.repoman.metainfo.xml  io.github.Tecktron.repoman.policy  net.tecktron.repoman.desktop  net.tecktron.repoman.gschema.xml  net.tecktron.repoman.metainfo.xml  net.tecktron.repoman.policy  suite-agnostic.conf
debian/: changelog  control  copyright  install  postinst  postrm  rules
help-docs/: mkdocs.yml
help-docs/docs/: CNAME  changelog.md  getting-started.md  index.md  install.md  why.md
help-docs/overrides/: home.html
sphinx/: conf.py  index.rst
sphinx/_static/: custom.css
sphinx/_templates/: layout.html  logo.html
sphinx/api/: checker.rst  config_io.rst  converter.rst  gpg.rst  index.rst  models.rst  parser.rst  paths.rst  source_parse.rst  ui.rst  upgrade_info.rst  utils.rst  writer.rst
src/repoman/: checker.py  config_io.py  converter.py  gpg.py  main.py  models.py  parser.py  paths.py  source_parse.py  upgrade_info.py  utils.py  writer.py
tests/: test_checker.py  test_config_io.py  test_converter.py  test_gpg.py  test_main.py  test_parser.py  test_source_parse.py  test_upgrade_info.py  test_utils.py  test_writer.py
tests/fixtures/: sample_disabled.sources  sample_legacy.list  sample_ppa.sources  sample_suite_agnostic.sources  (+1 more)
(+25 files in other folders)
